--- a/style.css
+++ b/style.css
@@ -1,11 +1,55 @@
-table, th, td {
-    border: 1px solid black;
-  }
+body {
+    padding: 70px;
+    background-image: url(floor-tile.png); /* Background pattern from Toptal Subtle Patterns */
+}
 
-  th, td {
-      width: 200px;
-  }
+th, td {
+    width: 400px;
+    background-color: rgba(196, 141, 141, 0.4);
+}
+
 
   #first-row {
-      color: peru
+      background-color:  rgb(99, 92, 72);
+      color: rgb(221, 205, 160);
+      height: 30px;
   }
+ 
+  #newBook {
+      padding: 10px;
+      background-color: rgb(221, 205, 160);
+  }
+
+  .deleteBtn {
+      height: 40px;
+      width: 100%;
+      border: 2px solid rgb(116, 51, 51);
+      background-color: rgb(107, 59, 59);
+      color: white;
+      font-size: 16px;
+  }
+  .changeBtn {
+    height: 40px;
+    width: 100%;
+    border: 2px solid rgb(69, 116, 51);
+    background-color: rgb(59, 107, 67);
+    color: white;
+    font-size: 16px;
+}
+
+.deleteBtn:hover {
+    height: 40px;
+    width: 100%;
+    border: 2px solid rgb(78, 34, 34);
+    background-color: rgb(172, 95, 95);
+    color: white;
+    font-size: 16px;
+}
+.changeBtn:hover {
+    height: 40px;
+    width: 100%;
+    border: 2px solid rgb(88, 146, 65);
+    background-color: rgb(29, 54, 34);
+    color: white;
+    font-size: 16px;
+}
